--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
     "@sendgrid/mail": "^6.4.0",
+    "@sentry/node": "^5.9.0",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
